--- a/index.html
+++ b/index.html
@@ -15,19 +15,11 @@
         <li><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">birthday-invite</a></li>
         <li><a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">movie-ranking</a></li>
     </ol>
+    <hr/>
     
+    <img src="./Kasim shows.png" alt="shows I am currently watching" height="200"/>
+    <hr/>
+
+    <a href="./public/contact.html">contact me</menu></a>
 </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
